@@ -155,6 +155,14 @@
 <!-- Define the list of Error Parser provided by the CDT                                 -->
 <!-- =================================================================================== -->
    <extension
+         id="MakeErrorParser"
+         name="%CDTGNUMakeErrorParser.name"
+         point="org.eclipse.cdt.core.ErrorParser">
+      <errorparser
+            class="org.eclipse.cdt.internal.errorparsers.MakeErrorParser">
+      </errorparser>
+   </extension>
+   <extension
          id="GCCErrorParser"
          name="%CDTGNUCErrorParser.name"
          point="org.eclipse.cdt.core.ErrorParser">
@@ -176,14 +184,6 @@
          point="org.eclipse.cdt.core.ErrorParser">
       <errorparser
             class="org.eclipse.cdt.internal.errorparsers.GLDErrorParser">
-      </errorparser>
-   </extension>
-   <extension
-         id="MakeErrorParser"
-         name="%CDTGNUMakeErrorParser.name"
-         point="org.eclipse.cdt.core.ErrorParser">
-      <errorparser
-            class="org.eclipse.cdt.internal.errorparsers.MakeErrorParser">
       </errorparser>
    </extension>
    <extension
